@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -296,7 +296,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -389,7 +389,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -482,7 +482,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -575,7 +575,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -668,7 +668,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -761,7 +761,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -854,7 +854,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -937,7 +937,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1030,7 +1030,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1123,7 +1123,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1216,7 +1216,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1309,7 +1309,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1402,7 +1402,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1495,7 +1495,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1588,7 +1588,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1681,7 +1681,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1774,7 +1774,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1857,7 +1857,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
@@ -1940,7 +1940,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Hotfix: push notifications token updates.
+              1. Added additional warnings for trades.<br />2. Fixed tab and radio button light theme colors.<br />3. Added two languages.
           </div>
         
 
